--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <section class="editable">
             <h2>Find Me On</h2>
             <p>Check out my <a href="https://discord.com/invite/swnSq4xCHq" target="_blank">Discord server</a> called Dragon Paws!</p>
-            <p>Feel free to <a href="mailto:destroyercomqq6@gmail.com">email me</a> for any questions. Also, please don't spam my inbox; I don't want to deal with that.</p>
+            <p>Feel free to <a href="mailto:removed due to furfall threat">email me</a> for any questions. Also, please don't spam my inbox; I don't want to deal with that.</p>
         </section>
 
         <footer>Thanks for visiting!</footer>
