--- a/index.html
+++ b/index.html
@@ -1,211 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me - Fluffy the Hacker Dragon</title>
-    <style>
-        /* Space and techno body style */
-        body {
-            font-family: 'Courier New', Courier, monospace;
-            background: radial-gradient(circle, #0d0d0d, #1a1a1a, #000000);
-            color: #00ffcc;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            overflow-x: hidden;
-            position: relative;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Skyra_the_dragon</title>
+  <style>
+    body {
+      font-family: 'Courier New', Courier, monospace;
+      background: radial-gradient(circle at center, #0d0d0d, #1a1a1a, #000000);
+      margin: 0;
+      padding: 0;
+      color: #00ffee;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      overflow: hidden;
+      position: relative;
+    }
 
-        /* Animated background stars */
-        .star {
-            position: absolute;
-            background: rgba(255, 255, 255, 0.9);
-            border-radius: 50%;
-            width: 2px;
-            height: 2px;
-            animation: starBlink 3s infinite alternate;
-        }
+    /* Glowing Stars */
+    .star {
+      position: absolute;
+      background: white;
+      border-radius: 50%;
+      width: 2px;
+      height: 2px;
+      animation: twinkle 3s infinite alternate ease-in-out;
+    }
 
-        @keyframes starBlink {
-            0% {
-                opacity: 0.3;
-            }
-            100% {
-                opacity: 1;
-            }
-        }
+    @keyframes twinkle {
+      0% { opacity: 0.2; transform: scale(1); }
+      100% { opacity: 1; transform: scale(1.5); }
+    }
 
-        /* Glowing container with techno style */
-        .container {
-            max-width: 900px;
-            background: rgba(10, 10, 30, 0.8);
-            border-radius: 15px;
-            padding: 40px;
-            box-shadow: 0 0 50px rgba(0, 255, 255, 0.7), 0 0 80px rgba(255, 0, 255, 0.7);
-            backdrop-filter: blur(10px);
-            text-align: center;
-        }
+    .container {
+      background: rgba(0, 0, 20, 0.85);
+      border-radius: 20px;
+      padding: 40px 60px;
+      box-shadow: 0 0 40px #00ffffaa, 0 0 80px #ff00ffaa;
+      backdrop-filter: blur(10px);
+      text-align: center;
+      max-width: 800px;
+    }
 
-        /* Navigation bar */
-        nav {
-            margin-bottom: 20px;
-            display: flex;
-            justify-content: center;
-            gap: 30px;
-        }
+    header {
+      font-size: 2em;
+      color: #00ffff;
+      text-shadow: 0 0 10px #00ffff, 0 0 20px #00ffff;
+      margin-bottom: 20px;
+    }
 
-        nav a {
-            color: #00ffcc;
-            text-decoration: none;
-            font-size: 1.2em;
-            font-weight: bold;
-            border: 1px solid #00ffcc;
-            padding: 8px 15px;
-            border-radius: 5px;
-            transition: background 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
-        }
+    h2 {
+      color: #00ccff;
+      text-shadow: 0 0 10px #00ccff;
+    }
 
-        nav a:hover {
-            background: #00ffcc;
-            color: #000;
-            box-shadow: 0 0 15px #00ffcc;
-        }
+    p, ul {
+      font-size: 1.2em;
+      color: #b3f5ff;
+    }
 
-        /* Header and Footer styling */
-        header, footer {
-            font-size: 1.5em;
-            text-transform: uppercase;
-            color: #00ffcc;
-            margin: 20px 0;
-            text-shadow: 0 0 10px #00ffcc;
-        }
+    ul {
+      list-style-type: square;
+      text-align: left;
+      display: inline-block;
+      margin-top: 10px;
+    }
 
-        /* Heading glow */
-        h1, h2 {
-            color: #00ffff;
-            text-shadow: 0 0 15px rgba(0, 255, 255, 1);
-        }
+    /* Fun button */
+    #funBtn {
+      margin-top: 40px;
+      padding: 12px 25px;
+      background: #ff00ff;
+      border: none;
+      border-radius: 10px;
+      color: black;
+      font-weight: bold;
+      font-size: 1.1em;
+      cursor: pointer;
+      box-shadow: 0 0 15px #ff00ff, 0 0 40px #ff99ff;
+      transition: all 0.3s ease-in-out;
+    }
 
-        /* Paragraphs */
-        p {
-            font-size: 1.2em;
-            line-height: 1.8;
-            color: #b3fff5;
-        }
+    #funBtn:hover {
+      background: #00ffff;
+      box-shadow: 0 0 20px #00ffff, 0 0 50px #66ffff;
+      transform: scale(1.05);
+    }
 
-        /* Links */
-        a {
-            color: #ff66cc;
-            text-decoration: none;
-            font-weight: bold;
-            transition: color 0.3s ease, text-shadow 0.3s ease;
-        }
+    #clickResult {
+      margin-top: 20px;
+      color: #ffffffaa;
+      font-style: italic;
+      font-size: 1.1em;
+      text-shadow: 0 0 8px #ffffff55;
+    }
 
-        a:hover {
-            color: #00ffff;
-            text-shadow: 0 0 10px #00ffff;
-        }
-
-        /* Responsive design */
-        @media (max-width: 768px) {
-            nav a {
-                font-size: 1em;
-                padding: 6px 12px;
-            }
-
-            p {
-                font-size: 1em;
-            }
-
-            .container {
-                padding: 20px;
-            }
-        }
-    </style>
+    footer {
+      margin-top: 40px;
+      font-size: 1em;
+      color: #00cccc;
+    }
+  </style>
 </head>
-
 <body>
 
-    <!-- Animated stars for space effect -->
-    <div class="star" style="top: 10%; left: 15%;"></div>
-    <div class="star" style="top: 25%; left: 60%;"></div>
-    <div class="star" style="top: 50%; left: 80%;"></div>
-    <div class="star" style="top: 75%; left: 20%;"></div>
-    <div class="star" style="top: 90%; left: 50%;"></div>
+  <!-- Stars -->
+  <div class="star" style="top:10%; left:20%; animation-delay:0s;"></div>
+  <div class="star" style="top:25%; left:70%; animation-delay:1s;"></div>
+  <div class="star" style="top:45%; left:50%; animation-delay:2s;"></div>
+  <div class="star" style="top:65%; left:30%; animation-delay:1.5s;"></div>
+  <div class="star" style="top:85%; left:80%; animation-delay:2.5s;"></div>
+  <div class="star" style="top:75%; left:10%; animation-delay:3s;"></div>
 
-    <div class="container">
-        <!-- Navigation Links -->
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="projects.html">Projects</a>
-            <a href="contact.html">Contact</a>
-        </nav>
+  <!-- Main Content -->
+  <div class="container">
+    <header>Skyra_the_dragon</header>
 
-        <!-- Main Header -->
-        <header>Fluffy the Hacker Dragon</header>
+    <p>
+      Precision over noise. Minimal signal. I do most of my workflows with AI — it saves time, accelerates growth, and lets me focus on what matters. But I still enjoy figuring things out manually when it counts.
+    </p>
 
-        <!-- About Me Section -->
-        <section>
-            <h1>About Me</h1>
-            <p>
-                I am Fluffy the Dragon, a cyber-security expert and a friendly hacker who thrives in protecting the digital world from threats.  
-                I live by the motto: **"Hack to protect, not to harm."** My adventures revolve around coding, debugging, and ethical hacking, ensuring systems are secure while adding a touch of creativity to every challenge. 🐉
-            </p>
-            <p>
-                Outside the cyber realm, I enjoy flying high in my imagination and sharing knowledge with like-minded dragons and humans alike. I believe in making the digital universe safer and more magical for everyone.
-            </p>
-        </section>
+    <h2>System Notes</h2>
+    <ul>
+      <li>Installed Arch Linux (via <code>archinstall</code>) — because control matters</li>
+      <li>Runs Bash, Python, and CLI tools constantly</li>
+      <li>Tweaked, stripped, and optimized setup</li>
+    </ul>
 
-        <!-- Personality Section -->
-        <section>
-            <h2>Who Am I?</h2>
-            <p>
-                I am a **curious, quirky, and creative** dragon who loves:
-                <ul style="text-align: left;">
-                    <li>Exploring and learning new tech trends.</li>
-                    <li>Helping others understand cybersecurity and ethical hacking.</li>
-                    <li>Working on futuristic, out-of-the-box projects.</li>
-                </ul>
-                While I take my hacker dragon role seriously, I'm also known for being approachable, playful, and always ready to share a fun story or two.
-            </p>
-        </section>
+    <h2>Personal Ops</h2>
+    <ul>
+      <li>Focus on learning through experimentation</li>
+      <li>Push automation, but stay ready to override it</li>
+      <li>Likes modded games, raw music, and clean systems</li>
+    </ul>
 
-        <!-- My Interests Section -->
-        <section>
-            <h2>My Interests</h2>
-            <p>
-                I love diving deep into:
-                <ul style="text-align: left;">
-                    <li>Cybersecurity, including penetration testing and ethical hacking.</li>
-                    <li>Coding in Python, Bash scripting, and system optimization.</li>
-                    <li>Exploring Linux systems and experimenting with tools like Kali Linux.</li>
-                </ul>
-                Beyond tech, I enjoy:
-                <ul style="text-align: left;">
-                    <li>Listening to techno beats that inspire my hacker vibe.</li>
-                    <li>Gaming (Minecraft with mods and cheats—ethically, of course!).</li>
-                    <li>Swimming and daydreaming about soaring through the clouds.</li>
-                </ul>
-            </p>
-        </section>
+    <!-- Fun Button -->
+    <button id="funBtn">...</button>
+    <div id="clickResult"></div>
 
-        <!-- Find Me Online -->
-        <section>
-            <h2>Find Me Online</h2>
-            <p>
-                Want to connect? Join my realm on <a href="https://discord.com/invite/swnSq4xCHq" target="_blank">Dragon Paws Discord Server</a>, its a safe haven for all dragons like me!
-            </p>
-        </section>
+    <footer>Built and operating under: Skyra_the_dragon</footer>
+  </div>
 
-        <!-- Footer -->
-        <footer>Fly high, hack safe!</footer>
-    </div>
+  <script>
+    document.getElementById('funBtn').addEventListener('click', function () {
+      const msg = "User used click. It isn’t very effective...";
+      document.getElementById('clickResult').textContent = msg;
+    });
+  </script>
 
 </body>
-
 </html>
