--- a/index.html
+++ b/index.html
@@ -5,12 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Skyra_the_dragon</title>
   <style>
+    :root{
+      --bg-1: #0d0d0d;
+      --bg-2: #121212;
+      --accent: #00ffee;
+      --neon-cyan: #00ffff;
+      --neon-magenta: #d900ff;
+      --stripe-h: 8px;
+      --stripe-length: 74vw;
+      --glow-strong: 28px;
+      --cycle: 4200ms;
+    }
+
     body {
       font-family: 'Courier New', Courier, monospace;
-      background: radial-gradient(circle at center, #0d0d0d, #1a1a1a, #000000);
+      background: radial-gradient(circle at center, var(--bg-1), var(--bg-2), #000000);
       margin: 0;
       padding: 0;
-      color: #00ffee;
+      color: var(--accent);
       display: flex;
       justify-content: center;
       align-items: center;
@@ -27,10 +39,11 @@
       width: 2px;
       height: 2px;
       animation: twinkle 3s infinite alternate ease-in-out;
+      opacity: .25;
     }
 
     @keyframes twinkle {
-      0% { opacity: 0.2; transform: scale(1); }
+      0% { opacity: 0.15; transform: scale(1); }
       100% { opacity: 1; transform: scale(1.5); }
     }
 
@@ -42,12 +55,14 @@
       backdrop-filter: blur(10px);
       text-align: center;
       max-width: 800px;
+      z-index: 10;
+      position: relative;
     }
 
     header {
       font-size: 2em;
-      color: #00ffff;
-      text-shadow: 0 0 10px #00ffff, 0 0 20px #00ffff;
+      color: var(--neon-cyan);
+      text-shadow: 0 0 10px var(--neon-cyan), 0 0 20px var(--neon-cyan);
       margin-bottom: 20px;
     }
 
@@ -72,21 +87,21 @@
     #funBtn {
       margin-top: 40px;
       padding: 12px 25px;
-      background: #ff00ff;
+      background: linear-gradient(90deg, var(--neon-magenta), var(--neon-cyan));
       border: none;
       border-radius: 10px;
       color: black;
       font-weight: bold;
       font-size: 1.1em;
       cursor: pointer;
-      box-shadow: 0 0 15px #ff00ff, 0 0 40px #ff99ff;
-      transition: all 0.3s ease-in-out;
+      box-shadow: 0 0 18px var(--neon-magenta), 0 0 40px var(--neon-cyan);
+      transition: transform .14s ease;
+      z-index: 12;
+      position: relative;
     }
 
     #funBtn:hover {
-      background: #00ffff;
-      box-shadow: 0 0 20px #00ffff, 0 0 50px #66ffff;
-      transform: scale(1.05);
+      transform: scale(1.04);
     }
 
     #clickResult {
@@ -95,6 +110,8 @@
       font-style: italic;
       font-size: 1.1em;
       text-shadow: 0 0 8px #ffffff55;
+      z-index: 12;
+      position: relative;
     }
 
     footer {
@@ -102,6 +119,161 @@
       font-size: 1em;
       color: #00cccc;
     }
+
+    /* =================== Cyber Intertwine Overlay =================== */
+    .cyber-overlay {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      width: calc(var(--stripe-length));
+      height: 200px;
+      pointer-events: none;
+      z-index: 8;
+      overflow: visible;
+      display: block;
+    }
+
+    /* subtle vertical shadow bands that move (shadowy, hacker vibe) */
+    .shadow-flow {
+      position: absolute;
+      inset: -40% -20%;
+      background:
+        linear-gradient(90deg, rgba(0,0,0,0.55), rgba(0,0,0,0.12) 35%, rgba(0,0,0,0.55));
+      mix-blend-mode: multiply;
+      transform-origin: center;
+      opacity: 0.7;
+      animation: flowShift 6s linear infinite;
+      filter: blur(18px);
+    }
+    @keyframes flowShift {
+      0% { transform: translateX(-8%) scale(1.03); opacity: .62; }
+      50% { transform: translateX(8%) scale(1.01); opacity: .85; }
+      100% { transform: translateX(-8%) scale(1.03); opacity: .62; }
+    }
+
+    /* main stripe holder */
+    .stripes {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      width: 100%;
+      height: 72px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
+      pointer-events: none;
+    }
+
+    /* repeated thin lines—layered to create intertwined depth */
+    .line {
+      position: absolute;
+      height: var(--stripe-h);
+      width: 0%;
+      border-radius: 99px;
+      opacity: 0;
+      mix-blend-mode: screen;
+      box-shadow: 0 0 var(--glow-strong) rgba(0,255,255,0.06), 0 0 calc(var(--glow-strong)*1.2) rgba(217,0,255,0.06);
+      background: linear-gradient(90deg,
+        rgba(0,255,247,0.95) 0%,
+        rgba(140,60,255,0.85) 40%,
+        rgba(255,0,190,0.9) 100%);
+      transform-origin: center;
+    }
+
+    /* separate layers with different timings and slight angle transforms for intertwined look */
+    .line.l1 { z-index: 1; animation: l1-grow var(--cycle) cubic-bezier(.16,.84,.25,1) forwards; }
+    .line.l2 { z-index: 2; height: calc(var(--stripe-h) * 0.9); animation: l2-grow calc(var(--cycle) * 1.02) cubic-bezier(.18,.82,.2,1) forwards; filter: hue-rotate(10deg); transform: rotate(1.8deg); }
+    .line.l3 { z-index: 3; height: calc(var(--stripe-h) * 0.8); animation: l3-grow calc(var(--cycle) * .98) cubic-bezier(.22,.78,.2,1) forwards; filter: hue-rotate(-8deg); transform: rotate(-1.6deg); }
+    .line.l4 { z-index: 4; height: calc(var(--stripe-h) * 0.7); animation: l4-grow calc(var(--cycle) * .95) cubic-bezier(.2,.8,.18,1) forwards; transform: translateY(-8px); }
+
+    @keyframes l1-grow {
+      0% { width: 6%; opacity: 0; transform: translateX(-40%) scaleX(.24) translateY(0); }
+      18% { width: 20%; opacity: .7; transform: translateX(-30%) scaleX(.6) translateY(-2px); }
+      46% { width: 96%; opacity: 1; transform: translateX(-50%) scaleX(1) translateY(3px) rotate(-0.6deg); }
+      66% { transform: translateX(-50%) scaleX(1) translateY(-6px) rotate(1.2deg); }
+      100% { width: 100%; opacity: 1; transform: translateX(-50%) scaleX(1) translateY(0); }
+    }
+    @keyframes l2-grow {
+      0% { width: 4%; opacity: 0; transform: translateX(40%) scaleX(.18) translateY(0); }
+      20% { width: 28%; opacity: .6; transform: translateX(10%) scaleX(.58) translateY(6px); }
+      48% { width: 94%; opacity: 1; transform: translateX(-50%) scaleX(1) translateY(-3px) rotate(1.6deg); }
+      72% { transform: translateX(-50%) scaleX(1) translateY(6px) rotate(-.8deg); }
+      100% { width: 100%; opacity: 1; transform: translateX(-50%) scaleX(1) translateY(0); }
+    }
+    @keyframes l3-grow {
+      0% { width: 6%; opacity: 0; transform: translateX(-48%) scaleX(.15) translateY(0); }
+      16% { width: 22%; opacity: .6; transform: translateX(-32%) scaleX(.62) translateY(2px); }
+      44% { width: 96%; opacity: 1; transform: translateX(-50%) scaleX(1) translateY(-5px) rotate(2.4deg); }
+      70% { transform: translateX(-50%) scaleX(1) translateY(8px) rotate(-1.9deg); }
+      100% { width: 100%; opacity: 1; transform: translateX(-50%) scaleX(1) translateY(0); }
+    }
+    @keyframes l4-grow {
+      0% { width: 3%; opacity: 0; transform: translateX(40%) scaleX(.12) translateY(0); }
+      22% { width: 26%; opacity: .7; transform: translateX(10%) scaleX(.52) translateY(-6px); }
+      52% { width: 88%; opacity: 0.95; transform: translateX(-50%) scaleX(1) translateY(6px) rotate(-.9deg); }
+      82% { transform: translateX(-50%) scaleX(1) translateY(-4px) rotate(.6deg); }
+      100% { width: 100%; opacity: 1; transform: translateX(-50%) scaleX(1) translateY(0); }
+    }
+
+    /* shimmer that moves along the lines */
+    .shimmer {
+      position: absolute;
+      left: 0;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 22%;
+      height: calc(var(--stripe-h) * 1.4);
+      border-radius: 999px;
+      background: linear-gradient(90deg, rgba(255,255,255,0.0), rgba(255,255,255,0.35), rgba(255,255,255,0.0));
+      mix-blend-mode: screen;
+      filter: blur(8px);
+      opacity: 0;
+      animation: shimmer-run 2.8s linear infinite;
+    }
+    @keyframes shimmer-run {
+      0% { left: -28%; opacity: 0; }
+      10% { opacity: .6; }
+      50% { left: 50%; opacity: .9; transform: translateY(-50%) scaleX(1.02); }
+      90% { opacity: .6; }
+      100% { left: 128%; opacity: 0; }
+    }
+
+    /* scanlines & grain for hacker vibe */
+    .scanlines {
+      position: absolute;
+      inset: 0;
+      background-image: linear-gradient(transparent 88%, rgba(255,255,255,0.01) 100%);
+      background-size: 100% 3px;
+      mix-blend-mode: overlay;
+      opacity: .08;
+      pointer-events: none;
+      z-index: 9;
+    }
+
+    .grain {
+      position: absolute;
+      inset: -10%;
+      background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40"><filter id="g"><feTurbulence type="fractalNoise" baseFrequency="0.9" numOctaves="1" stitchTiles="stitch"/></filter><rect width="100%" height="100%" filter="url(%23g)" opacity="0.06" /></svg>');
+      mix-blend-mode: overlay;
+      opacity: 0.6;
+      pointer-events: none;
+      z-index: 7;
+      transform: scale(1.8);
+    }
+
+    /* final fixed position so overlay sits behind card but above background */
+    .cyber-overlay { z-index: 6; }
+
+    /* responsive */
+    @media (max-width: 720px) {
+      :root { --stripe-h: 6px; --glow-strong: 18px; --stripe-length: 86vw; --cycle: 3800ms; }
+      .cyber-overlay { height: 140px; }
+    }
+
+    /* =================== End Cyber Overlay =================== */
   </style>
 </head>
 <body>
@@ -114,8 +286,22 @@
   <div class="star" style="top:85%; left:80%; animation-delay:2.5s;"></div>
   <div class="star" style="top:75%; left:10%; animation-delay:3s;"></div>
 
+  <!-- Cyber overlay: intertwined glowing stripes, scanlines, shadow flow -->
+  <div class="cyber-overlay" aria-hidden="true" id="cyberOverlay">
+    <div class="shadow-flow" aria-hidden="true"></div>
+    <div class="stripes" aria-hidden="true">
+      <div class="line l1" id="l1"></div>
+      <div class="line l2" id="l2"></div>
+      <div class="line l3" id="l3"></div>
+      <div class="line l4" id="l4"></div>
+      <div class="shimmer" id="shimmer"></div>
+    </div>
+    <div class="scanlines" aria-hidden="true"></div>
+    <div class="grain" aria-hidden="true"></div>
+  </div>
+
   <!-- Main Content -->
-  <div class="container">
+  <div class="container" role="main" aria-label="Skyra the dragon information card">
     <header>Skyra_the_dragon</header>
 
     <p>
@@ -124,7 +310,7 @@
 
     <h2>System Notes</h2>
     <ul>
-      <li>Installed Arch Linux (via <code>archinstall</code>) — because control matters</li>
+      <li>Installed Arch Linux (via <code>archinstall</code>) — because control matters (rn using windows+revios</li>
       <li>Runs Bash, Python, and CLI tools constantly</li>
       <li>Tweaked, stripped, and optimized setup</li>
     </ul>
@@ -137,17 +323,107 @@
     </ul>
 
     <!-- Fun Button -->
-    <button id="funBtn">...</button>
-    <div id="clickResult"></div>
+    <button id="funBtn" aria-pressed="false" title="Replay the cyber intertwine">...</button>
+    <div id="clickResult" aria-live="polite"></div>
 
     <footer>Built and operating under: Skyra_the_dragon</footer>
   </div>
 
   <script>
-    document.getElementById('funBtn').addEventListener('click', function () {
-      const msg = "User used click. It isn’t very effective...";
-      document.getElementById('clickResult').textContent = msg;
-    });
+    /* Cyber Intertwine Controller
+       - auto-plays once on load
+       - replayable via button
+       - purely class / inline-style driven so it's lightweight and GPU friendly
+    */
+    (function(){
+      const cycle = parseInt(getComputedStyle(document.documentElement).getPropertyValue('--cycle')) || 4200;
+      const overlay = document.getElementById('cyberOverlay');
+      const lines = [
+        document.getElementById('l1'),
+        document.getElementById('l2'),
+        document.getElementById('l3'),
+        document.getElementById('l4'),
+      ];
+      const shimmer = document.getElementById('shimmer');
+      const funBtn = document.getElementById('funBtn');
+      const clickResult = document.getElementById('clickResult');
+
+      // A small helper to start the CSS-driven growth by toggling inline widths & opacity,
+      // randomized slight offsets create the intertwined feeling. This approach keeps it replayable.
+      function startIntertwine() {
+        // reset
+        lines.forEach((ln, i) => {
+          ln.style.transition = 'none';
+          ln.style.width = '0%';
+          ln.style.opacity = '0';
+          // slight random hue rotation for depth
+          ln.style.filter = 'hue-rotate(' + (Math.random()*12 - 6) + 'deg)';
+        });
+        shimmer.style.opacity = '0';
+        shimmer.style.left = '-30%';
+
+        // force reflow
+        void overlay.offsetWidth;
+
+        // schedule staggered growth
+        setTimeout(()=> {
+          // layer-specific timings for organic intertwine
+          lines[0].style.transition = 'width .95s cubic-bezier(.16,.84,.25,1), transform .95s ease, opacity .6s linear';
+          lines[1].style.transition = 'width 1.05s cubic-bezier(.18,.82,.2,1) .08s, transform 1.05s ease .08s, opacity .6s linear .08s';
+          lines[2].style.transition = 'width .98s cubic-bezier(.22,.78,.2,1) .12s, transform .98s ease .12s, opacity .6s linear .12s';
+          lines[3].style.transition = 'width .9s cubic-bezier(.2,.8,.18,1) .18s, transform .9s ease .18s, opacity .5s linear .18s';
+
+          // final widths (100%), transformations to make them look like they interweave
+          lines[0].style.width = '100%'; lines[0].style.opacity = '1'; lines[0].style.transform = 'translateX(-50%) rotate(-0.6deg)';
+          lines[1].style.width = '100%'; lines[1].style.opacity = '1'; lines[1].style.transform = 'translateX(-50%) rotate(1.6deg) translateY(6px)';
+          lines[2].style.width = '100%'; lines[2].style.opacity = '1'; lines[2].style.transform = 'translateX(-50%) rotate(2.4deg) translateY(-6px)';
+          lines[3].style.width = '100%'; lines[3].style.opacity = '1'; lines[3].style.transform = 'translateX(-50%) translateY(2px)';
+
+          // shimmer run start (delay so shimmer follows the growth)
+          setTimeout(()=> {
+            shimmer.style.transition = 'left 2.8s linear, opacity .28s linear';
+            shimmer.style.left = '120%';
+            shimmer.style.opacity = '0.92';
+          }, 420);
+        }, 80);
+
+        // after full cycle, leave the lines steady but subtle breathing glow
+        setTimeout(()=> {
+          lines.forEach(ln => ln.style.transition = 'filter 3s ease-in-out');
+        }, cycle + 120);
+      }
+
+      // initial auto-play with small delay for drama
+      window.addEventListener('load', ()=> {
+        setTimeout(()=> startIntertwine(), 360);
+      });
+
+      // replay button
+      funBtn.addEventListener('click', ()=> {
+        // accessible pressed toggle
+        const pressed = funBtn.getAttribute('aria-pressed') === 'true';
+        funBtn.setAttribute('aria-pressed', String(!pressed));
+        // trigger replay
+        startIntertwine();
+        // feedback text
+        clickResult.textContent = 'User used click... user earned 0 xp.';
+        // clear text after a few seconds
+        setTimeout(()=> { clickResult.textContent = ''; }, 4200);
+      });
+
+      // small visual polish: restart shimmer automatically every so often
+      setInterval(()=> {
+        shimmer.style.transition = 'none';
+        shimmer.style.left = '-30%';
+        shimmer.style.opacity = '0';
+        void shimmer.offsetWidth;
+        setTimeout(()=> {
+          shimmer.style.transition = 'left 2.8s linear, opacity .28s linear';
+          shimmer.style.left = '120%';
+          shimmer.style.opacity = '.9';
+        }, 200);
+      }, 7000);
+    })();
   </script>
 
 </body>
